--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -28,11 +28,11 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      # 3. Instalar dependencias
+      # 3. Instalar dependencias desde el archivo requirements.txt dentro de la carpeta 'proyecto'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r proyecto/requirements.txt  # Ruta correcta a requirements.txt
           pip install pytest pytest-cov  # Para generar cobertura de código
 
       # 4. Ejecutar pruebas y generar cobertura
