--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-
+    
 jobs:
   sonarqube:
     name: SonarCloud Analysis
@@ -28,19 +28,25 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      # 3. Instalar dependencias desde el archivo requirements.txt dentro de la carpeta 'proyecto'
+      # 3. Instalar dependencias del sistema necesarias para pyodbc
+      - name: Install system dependencies for pyodbc
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unixodbc-dev gcc g++
+
+      # 4. Instalar dependencias desde el archivo requirements.txt
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r proyecto/requirements.txt  # Ruta correcta a requirements.txt
           pip install pytest pytest-cov  # Para generar cobertura de código
 
-      # 4. Ejecutar pruebas y generar cobertura
+      # 5. Ejecutar pruebas y generar cobertura
       - name: Run tests and generate coverage
         run: |
           pytest --cov=./ --cov-report=xml
 
-      # 5. Iniciar análisis con SonarCloud
+      # 6. Iniciar análisis con SonarCloud
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
         with:
