--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -30,13 +30,10 @@ jobs:
         sudo apt install -y openjdk-17-jdk
         java -version  # Verifica que Java 17 se haya instalado correctamente
 
-    # Paso 4: Instalar SonarScanner 6.2.1 para Linux
-    - name: Install SonarScanner 6.2.1
+    # Paso 4: Instalar SonarScanner usando apt-get
+    - name: Install SonarScanner
       run: |
-        wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-6.2.1.4610-linux.zip
-        unzip sonar-scanner-cli-6.2.1.4610-linux.zip
-        sudo mv sonar-scanner-6.2.1.4610-linux /opt/sonar-scanner
-        sudo ln -s /opt/sonar-scanner/bin/sonar-scanner /usr/local/bin/sonar-scanner
+        sudo apt-get install -y sonar-scanner
         sonar-scanner --version  # Verifica que SonarScanner esté correctamente instalado
 
     # Paso 5: Configurar Python
