--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -33,3 +33,50 @@ jobs:
 
       - name: Monitor project with Snyk
         run: snyk monitor --file=proyecto/requirements.txt
+
+      - name: Install Snyk-to-HTML
+        run: npm install -g snyk-to-html
+
+      - name: Snyk Code test
+        run: snyk code test --sarif-file-output=snyk.sarif --json-file-output=snyk-report.json || echo "Snyk code test completed with issues"
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
+      - name: Verificar existencia del archivo SARIF
+        run: ls -la snyk.sarif
+
+      - name: Mover archivo SARIF a Reportes
+        run: |
+          mkdir -p ../Reportes  # Crea el directorio si no existe
+          mv snyk.sarif ../Reportes/  # Mueve el archivo SARIF a la carpeta Reportes
+
+      - name: Generar reporte HTML desde SARIF
+        run: snyk-to-html -i ../Reportes/snyk.sarif -o ../Reportes/snyk-report.html 
+
+      - name: Verificar existencia del reporte HTML
+        run: ls -la ../Reportes/snyk-report.html
+
+      - name: Snyk Open Source monitor
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        working-directory: ProyectoFinal
+        run: snyk monitor
+
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ../Reportes/snyk.sarif  
+
+      - name: Configurar Git para publicar en GitHub Pages
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+      - name: Publicar reporte en GitHub Pages
+        run: |
+          git fetch origin gh-pages  # Obtiene la última versión de la rama gh-pages
+          git checkout gh-pages  # Cambia a la rama gh-pages
+          cp ../Reportes/snyk-report.html reporte-snyk.html  # Cambia el nombre al copiar
+          git add reporte-snyk.html
+          git commit -m "Publicando reporte de Snyk como reporte-snyk.html" || echo "No hay cambios para commitear"  # Manejo de caso si no hay cambios
+          git push origin gh-pages  # Publica sin usar --force
