--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -76,7 +76,7 @@ jobs:
           cd proyecto
           mkdir -p ../Reportes  # Crear el directorio si no existe
           # Mover el reporte HTML
-          mv report_coverage/htmlcov/index.html ../Reportes/reporte-sonar.html  # Mover el reporte HTML a la carpeta de reportes
+          mv report_coverage/htmlcov/ ../Reportes/  # Mover el reporte HTML a la carpeta de reportes
 
       # Paso 10: Configurar Git para publicar en GitHub Pages
       - name: Configure Git for GitHub Pages
@@ -95,7 +95,7 @@ jobs:
         run: |
           git fetch origin gh-pages  # Obtener la última versión de la rama gh-pages
           git checkout gh-pages  # Cambiar a la rama gh-pages
-          cp ../Reportes/reporte-sonar.html reporte-sonar.html  # Copiar el archivo a la rama gh-pages
-          git add reporte-sonar.html
-          git commit -m "Publishing SonarCloud coverage report as reporte-sonar.html" || echo "No changes to commit"  # Manejo de caso si no hay cambios
+          cp -r ../Reportes/htmlcov ./  # Copiar todo el directorio htmlcov a la rama gh-pages
+          git add htmlcov  # Asegúrate de agregar todo el contenido del directorio htmlcov
+          git commit -m "Publishing SonarCloud coverage report and htmlcov" || echo "No changes to commit"  # Confirmar los cambios si los hay
           git push origin gh-pages  # Publicar sin usar --force
