--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -83,13 +83,22 @@ jobs:
       # Paso 9: Crear carpeta de reportes
       - name: Create Reports folder
         run: |
-          cd proyecto
-          mkdir -p ../Reportes  # Crear el directorio si no existe
+          mkdir -p proyecto/Reportes  # Crear el directorio si no existe
           # Mover el reporte HTML
-          mv report_coverage/htmlcov/ ../Reportes/  # Mover el reporte HTML a la carpeta de reportes
+          mv proyecto/report_coverage/htmlcov/ proyecto/Reportes/  # Mover el reporte HTML a la carpeta de reportes
           # Verificar que htmlcov haya sido generado
-          ls -la ../Reportes/
-          ls -la ../Reportes/htmlcov/
+          ls -la proyecto/Reportes/
+          ls -la proyecto/Reportes/htmlcov/
+
+      # Paso 9.1 : Verificar si el directorio htmlcov existe antes de moverlo
+      - name: Check if htmlcov exists
+        run: |
+          if [ -d "proyecto/Reportes/htmlcov" ]; then
+            echo "htmlcov directory exists."
+          else
+            echo "htmlcov directory does not exist. Exiting."
+            exit 1
+          fi  
 
 
       # Paso 10: Configurar Git para publicar en GitHub Pages
@@ -109,7 +118,7 @@ jobs:
         run: |
           git fetch origin gh-pages  # Obtener la última versión de la rama gh-pages
           git checkout gh-pages  # Cambiar a la rama gh-pages
-          cp -r proyecto/report_coverage/htmlcov ./  # Copiar todo el directorio htmlcov a la rama gh-pages
+          cp -r proyecto/Reportes/htmlcov ./  # Copiar todo el directorio htmlcov a la rama gh-pages
           git add htmlcov  # Asegúrate de agregar todo el contenido del directorio htmlcov
           git commit -m "Publishing SonarCloud coverage report and htmlcov" || echo "No changes to commit"  # Confirmar los cambios si los hay
           git push origin gh-pages  # Publicar sin usar --force
