--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -1,4 +1,4 @@
-name: Generate and Deploy HTML Report
+name: Generate and Deploy Coverage HTML Report with ReportGenerator
 
 on:
   push:
@@ -25,19 +25,28 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r proyecto/requirements.txt
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov  # Instalación de pytest y pytest-cov para cobertura
 
-    - name: Run tests and generate HTML coverage report
+    - name: Run tests and generate Cobertura XML coverage report
       run: |
-        cd proyecto  # Cambia al directorio del proyecto si es necesario
-        pytest --cov=. tests/ --cov-report=html:./htmlcov  # Genera el reporte de cobertura en HTML
+        cd proyecto  # Cambia al directorio de tu proyecto
+        pytest --cov=. tests/ --cov-report=cobertura:tests/test_reports/coverage.cobertura.xml  # Genera el reporte de cobertura en formato Cobertura
 
-    - name: Mover directorio de reporte a Reportes
+    - name: Install ReportGenerator tool
+      run: |
+        dotnet tool install -g dotnet-reportgenerator-globaltool  # Instala la herramienta ReportGenerator
+
+    - name: Generate HTML report from Cobertura XML using ReportGenerator
+      run: |
+        # Ejecuta ReportGenerator para generar el reporte HTML a partir del XML de cobertura
+        ReportGenerator "-reports:tests/test_reports/coverage.cobertura.xml" "-targetdir:tests/test_reports/Cobertura" -reporttypes:HTML
+
+    - name: Mover el directorio de reportes a Reportes
       run: |
         # Crea el directorio "Reportes" en la raíz si no existe
         mkdir -p ../Reportes
-        # Mueve el directorio htmlcov a ../Reportes/htmlcov
-        mv proyecto/htmlcov ../Reportes/htmlcov
+        # Mueve el directorio con el reporte generado a ../Reportes/Cobertura
+        mv proyecto/tests/test_reports/Cobertura ../Reportes/Cobertura
 
     - name: Configurar Git para publicar en GitHub Pages
       run: |
@@ -56,14 +65,14 @@ jobs:
         # Crea un directorio 'Pruebas-U' si no existe en la rama gh-pages
         mkdir -p Pruebas-U
 
-        # Mueve el directorio htmlcov dentro de Pruebas-U
-        cp -r ../Reportes/htmlcov ./Pruebas-U/htmlcov
+        # Mueve el directorio con el reporte HTML dentro de Pruebas-U
+        cp -r ../Reportes/Cobertura ./Pruebas-U/Cobertura
 
-        # Añadir el directorio htmlcov dentro de Pruebas-U a Git
-        git add Pruebas-U/htmlcov
+        # Añadir el directorio con el reporte a Git
+        git add Pruebas-U/Cobertura
 
         # Realiza commit si hay cambios
-        git commit -m "Publicando reporte de cobertura de pruebas dentro de Pruebas-U" || echo "No hay cambios para commitear"
+        git commit -m "Publicando reporte de cobertura en formato HTML dentro de Pruebas-U" || echo "No hay cambios para commitear"
 
         # Empuja los cambios a la rama gh-pages
         git push origin gh-pages
