--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -26,9 +26,21 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r proyecto/requirements.txt
         
+    - name: Set up .NET SDK (for ReportGenerator)
+      uses: actions/setup-dotnet@v3  # Usa la acción para configurar el SDK de .NET
+      with:
+        dotnet-version: '7.0'  # Usa la versión más reciente de .NET, o la que necesites
+
     - name: Install ReportGenerator tool
       run: |
-        dotnet tool install -g dotnet-reportgenerator-globaltool  # Instala la herramienta ReportGenerator
+        dotnet tool install --global dotnet-reportgenerator-globaltool  # Instala la herramienta ReportGenerator
+        # Agregar el directorio de herramientas globales de .NET al PATH
+        echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
+
+    - name: Run tests and generate Cobertura XML coverage report
+      run: |
+        cd proyecto  # Cambia al directorio de tu proyecto
+        pytest --cov=. tests/ --cov-report=cobertura:tests/test_reports/coverage.cobertura.xml  # Genera el reporte de cobertura en formato Cobertura
 
     - name: Generate HTML report from Cobertura XML using ReportGenerator
       run: |
