--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r proyecto/requirements.txt
+        pip install -r proyecto/requirements.txt  # Instala dependencias desde requirements.txt
+        pip install pytest pytest-cov  # Instala pytest y pytest-cov para cobertura de pruebas
         
     - name: Set up .NET SDK (for ReportGenerator)
       uses: actions/setup-dotnet@v3  # Usa la acción para configurar el SDK de .NET
