--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -23,12 +23,13 @@ jobs:
     # Instalar dependencias
     - name: Install dependencies
       run: |
-        pip install -r proyecto/requirements.txt
         pip install mutmut==2.0.0
+        pip install pytest  # Instalar pytest si no está en tus requerimientos
 
     # Ejecutar pruebas mutantes
     - name: Run mutmut
       run: |
+        cd proyecto
         mutmut run --paths-to-mutate classes/  # Ajusta según el directorio correcto
         mutmut html
 
