--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         pip install mutmut==2.0.0
         pip install pytest  # Instalar pytest si no está en tus requerimientos
+        pip install flask==3.0.3
 
     # Ejecutar pruebas mutantes
     - name: Run mutmut
