--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -25,8 +25,8 @@ jobs:
       run: |
         pip install mutmut==2.0.0
         pip install pytest  # Instalar pytest si no está en tus requerimientos
-        pip install flask==3.0.3
-        pip install pyodbc
+        pip install -r proyecto/requirements.txt
+
 
     # Ejecutar pruebas mutantes
     - name: Run mutmut
