--- a/.github/workflows/pruebas_unitarias.yml
+++ b/.github/workflows/pruebas_unitarias.yml
@@ -16,6 +16,22 @@ jobs:
     - name: Check out the repository
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'  # Usa la versión de Python que prefieras
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r proyecto/requirements.txt  # Instala dependencias desde requirements.txt
+        pip install pytest pytest-cov  # Instala pytest y pytest-cov para cobertura de pruebas
+
+    - name: Run tests and generate Cobertura XML coverage report
+      run: |
+        cd proyecto  # Cambia al directorio de tu proyecto
+        pytest --cov=. tests/ --cov-report=cobertura:tests/test_reports/coverage.cobertura.xml  # Genera el reporte de cobertura en formato Cobertura
+
     - name: Set up .NET SDK (for ReportGenerator)
       uses: actions/setup-dotnet@v3  # Usa la acción para configurar el SDK de .NET
       with:
@@ -29,7 +45,7 @@ jobs:
 
     - name: Generate HTML report from Cobertura XML using ReportGenerator
       run: |
-        # Ejecuta ReportGenerator para generar el reporte HTML a partir de un archivo XML de cobertura existente
+        # Ejecuta ReportGenerator para generar el reporte HTML a partir del archivo XML de cobertura
         ReportGenerator "-reports:tests/test_reports/coverage.cobertura.xml" "-targetdir:tests/test_reports/Cobertura" -reporttypes:HTML
 
     - name: Mover el directorio de reportes a Reportes
