--- a/.github/workflows/mutmut.yml
+++ b/.github/workflows/mutmut.yml
@@ -1,46 +1,50 @@
 name: Mutant Testing Report
-on:
-  push:
-    branches:
-      - main
+
 
 jobs:
   mutmut:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write  # This gives the workflow permission to push to gh-pages
     steps:
-    # Checkout the repository with full history
+    
+    # Checkout del repositorio
     - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Fetches full history for branch operations
+      uses: actions/checkout@v3
 
-    # Setup Python
+    # Configurar Python
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.10'  # Asegúrate de usar la versión que corresponde a tu proyecto
 
-    # Install dependencies
+    # Instalar dependencias
     - name: Install dependencies
       run: |
         pip install mutmut==2.0.0
-        pip install pytest
+        pip install pytest  # Instalar pytest si no está en tus requerimientos
         pip install -r proyecto/requirements.txt
 
-    # Run mutmut tests
+
+    # Ejecutar pruebas mutantes
     - name: Run mutmut
       run: |
         cd proyecto
-        mutmut run --paths-to-mutate classes/
+        mutmut run --paths-to-mutate classes/  # Ajusta según el directorio correcto
         mutmut html
 
-    # Deploy to GitHub Pages
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./proyecto/mutmut_html
-        publish_branch: gh-pages
-        force_orphan: true
+    # Configurar git para hacer commit en la rama gh-pages
+    - name: Set up Git
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "github-actions@github.com"
+
+    # Subir el reporte generado a gh-pages
+    - name: Commit and push mutated report to gh-pages
+      run: |
+        # Crear un nuevo directorio para los reportes si no existe
+        mkdir -p gh-pages/mutmut-report
+        mv mutmut_html/* gh-pages/mutmut-report/
+        
+        # Hacer commit de los cambios en gh-pages
+        git add gh-pages/mutmut-report/*
+        git commit -m "Add mutmut report"
+        git push origin gh-pages
