--- a/.github/workflows/bdd.yml
+++ b/.github/workflows/bdd.yml
@@ -29,12 +29,12 @@ jobs:
 
       - name: Generate Allure results
         run: |
-          cd Proyecto/Tests_BDD
+          cd proyecto/Tests_BDD
           behave -f allure_behave.formatter:AllureFormatter -o allure-results ./features
 
       - name: Generate HTML report
         run: |
-          cd Proyecto/Tests_BDD
+          cd proyecto/Tests_BDD
           allure generate allure-results --clean -o allure-report
 
       - name: Set up Git for deployment
@@ -46,7 +46,7 @@ jobs:
         run: |
           git fetch origin gh-pages  # Obtiene la última versión de la rama gh-pages
           git checkout gh-pages  # Cambia a la rama gh-pages
-          cp -r Proyecto/Tests_BDD/allure-report/* .
+          cp -r proyecto/Tests_BDD/allure-report/* .
           git add .  # Agrega todos los archivos copiados
           git commit -m "Deploy Allure report" || echo "No changes to commit"  # Manejo de caso si no hay cambios
           git push origin gh-pages  # Publica los cambios en la rama gh-pages
